parse imu data based on ts file, and create two .csv files

--- a/app/src/main/res/layout/parse_activity.xml
+++ b/app/src/main/res/layout/parse_activity.xml
@@ -134,7 +134,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="32dp"
         android:onClick="onClickView"
         android:text="choose file"
         app:layout_constraintBottom_toTopOf="@+id/parse_btn"
@@ -159,11 +159,28 @@
     <Button
         android:id="@+id/parse_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginBottom="32dp"
         android:onClick="onClickView"
-        android:text="start parse"
+        android:text="parse imu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/parse_mp4_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="32dp"
+        android:text="parse mp4"
+        android:onClick="onClickView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toEndOf="@+id/parse_btn" />
+
+
 </android.support.constraint.ConstraintLayout>
